--- a/css/index.css
+++ b/css/index.css
@@ -65,114 +65,15 @@ h1, h2, h3, h4, h5 {
     margin-bottom: 15px;
 }
 
-/* Commenting out my previous CSS because it's giving me trouble. I'm going to start it from scratch. */
-
-/*section, header, footer {
-	border: 1px solid purple;
-	width: 90%;
-	margin: 4%;
-}
-
-nav, img, a, p, h1, h2, address, div {
-	border: 1px solid purple;
-}
-
-.logo {
-	margin-left: 2.5%;
-}
-
-nav {
-	display: flex;
-	width: 80%;
-	padding: 2%;
-}
-
-a {
-	text-decoration: none;
-}
-
-nav a {
-	width: 30%;
-	margin: 5%;
-	color: darkgrey;
-}
-
-.first-section img {
-	display: flex;
-	margin-left: 6%;
-	width: 30%;
-}
-
-.first-section div {
-	display: flex;
-	margin: 2% 4%;
-	width: 45%;
-	text-align: center;
-}
-
-.first-section div a {
-	display: flex;
-	border: 1px solid black;
-	padding: 1%;
-	color: black;
-	width: 25%;
-}
-
-h1 {
-	font-size: 80px;
-	padding-bottom: 4%;
-}
-
-h2 {
-	font-size: 18px;
-}
-
-div {
-	display: flex;
-}
-
-.p-above-img {
-	width: 45%;
-	margin: 2%;
-	padding-top: 2%;
-	line-height: 1.5rem;
-}
-
-.p-below-img {
-	width: 29%;
-	margin: 2%;
-	padding-bottom: 2%;
-	line-height: 1.5rem;
-}
-
-.middle-img {
-	width: 95%;
-	margin: 2%;
-}
-
-footer h2, address {
-	margin: 2%;
-}
-
-footer p {
-	text-align: center;
-	padding: 2%;
-}
-
-.second-section {
-	border-top: 1px solid black;
-	border-bottom: 1px solid black;
-}*/
-
 body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-/*header, nav, p, div, a, img, h1, h2, address, section, footer {
+header, nav, p, div, a, img, h1, h2, address, section, footer {
 	border: 1px solid purple;
-}*/
+}
 
 header {
 	display: flex;
@@ -482,4 +383,14 @@ p, h2, div, img {
 	width: 49%;
 	border-radius: 100px;
 	border: 1px solid blanchedalmond;
+}
+
+/* Code for Responsive Design I project */
+
+@media (max-width: 800px) {
+
+}
+
+@media (max-width: 500px) {
+	
 }
