--- a/css/index.css
+++ b/css/index.css
@@ -88,7 +88,7 @@ nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 77%;
+	width: 70%;
 }
 
 nav a {
@@ -133,15 +133,11 @@ nav a {
 	justify-content: space-between;
 	width: 80%;
 	padding: 3% 0 2% 0;
-	border-top: 1px solid black;
+	border-top: 2px solid black;
 }
 
 .second-section div {
 	width: 48%;
-}
-
-.p-above-img {
-	text-align: justify;
 }
 
 .middle-img-wrap {
@@ -160,15 +156,11 @@ nav a {
 	justify-content: space-between;
 	width: 80%;
 	padding: 2% 0 3% 0;
-	border-bottom: 1px solid black;
+	border-bottom: 2px solid black;
 }
 
 .third-section div {
 	width: 31%;
-}
-
-.p-below-img {
-	text-align: justify;
 }
 
 h2 {
@@ -390,6 +382,10 @@ p, h2, div, img {
 /* Code for Responsive Design I project */
 
 @media (max-width: 800px) {
+	header, .first-section, .second-section, .middle-img-wrap, .third-section, footer {
+		width: 90%;
+	}
+
 	header {
 		flex-direction: column-reverse;
 	}
@@ -423,8 +419,6 @@ p, h2, div, img {
 		display: none;
 	}
 }
-
-/* Don't forget to fix the page width for both breakpoints */
 
 @media (max-width: 500px) {
 	nav {
