--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,7 @@ nav a {
 	display: flex;
 	justify-content: space-between;
 	width: 80%;
-	padding: 3% 0 2% 0;
+	padding: 30px 0 20px 0;
 	border-top: 2px solid black;
 }
 
@@ -155,7 +155,7 @@ nav a {
 	display: flex;
 	justify-content: space-between;
 	width: 80%;
-	padding: 2% 0 3% 0;
+	padding: 20px 0 30px 0;
 	border-bottom: 2px solid black;
 }
 
@@ -170,6 +170,10 @@ h2 {
 footer {
 	width: 80%;
 	padding: 2% 0;
+}
+
+.homepage-footer {
+	padding-top: 40px;
 }
 
 .copyright {
